add on click item album

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,9 @@
         <activity
             android:name=".activities.CreateAlbumActivity">
         </activity>
+        <activity
+            android:name=".activities.ItemAlbumActivity">
+        </activity>
     </application>
 
 </manifest>
