--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,9 @@
         <activity
             android:name=".activities.ItemAlbumActivity">
         </activity>
+        <activity
+            android:name=".activities.PhotoActivity">
+        </activity>
     </application>
 
 </manifest>
