add image to album

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,8 +43,12 @@
         <activity
             android:name=".activities.SlideShowActivity">
         </activity>
-        <activity  android:name=".activities.PhotoActivity">
-            </activity>
+        <activity
+            android:name=".activities.PhotoActivity">
+        </activity>
+        <activity
+            android:name=".activities.AddImageToAlbumActivity">
+        </activity>
     </application>
 
 </manifest>
