--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,9 @@
         <activity
             android:name=".activities.PrivateAlbumActivity">
         </activity>
+        <activity
+            android:name=".activities.MultiSelectPhotoActivity">
+        </activity>
     </application>
 
 </manifest>
